# Mesh_Radio_Flasher_noBT

./: .gitignore  CMakeLists.txt  README.md  ccache_setup.py  partitions_c3.csv  platformio.ini  sdkconfig.defaults  sdkconfig.xiao_esp32c3
components/hex/: CMakeLists.txt
components/hex/include/: hex_parser.h
components/hex/src/: hex_parser.c
components/power/: CMakeLists.txt
components/power/include/: power_mgmt.h
components/power/src/: power_mgmt.c
components/safety/: CMakeLists.txt
components/safety/include/: flash_safety.h
components/safety/src/: flash_safety.c
components/swd/: CMakeLists.txt
components/swd/include/: nrf52_hal.h  swd_core.h  swd_flash.h  swd_mem.h
components/swd/src/: swd_core.c  swd_flash.c  swd_mem.c
components/tftp/: CMakeLists.txt
components/tftp/include/: tftp_server.h
components/tftp/src/: tftp_server.c
components/utils/: CMakeLists.txt
components/utils/include/: recovery.h
components/utils/src/: recovery.c
components/web/: CMakeLists.txt
components/web/include/: web_server.h  web_upload.h
components/web/src/: web_handlers.c  web_server.c  web_upload.c
main/: CMakeLists.txt  config.h copy.template.h  config.h.template  main.c  wifi_manager.c  wifi_manager.h
